<resources>
    <string name="app_name">Academic Detailing Training App</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="district_name">District Name</string>
    <string name="doc_name">Provider Name</string>
    <string name="provider_id">Provider ID</string>
    <string name="hfac_name">Health Facility Name</string>
    <string name="book_date">Date</string>
    <string name="book_time">Time</string>
    <string name="schedule">Next Meeting Schedule</string>
    <string name="mainFragment">MainFragment</string>
    <string name="moduleFragment">ModuleFragment</string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gds01_01">Children with _________________ on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gds01_01a">Mild illness</string>
    <string name="gds01_01b">Pneumonia</string>
    <string name="gds01_01c">Dehydration</string>
    <string name="gds01_01d">Severe disease/classification</string>
    <string name="gds01_02">_________________is the exception for severe classification or severe disease where referral to the hospital is needed but not urgent.</string>
    <string name="gds01_02a">Persistent diarrhea</string>
    <string name="gds01_02b">Severe dehydration</string>
    <string name="gds01_02c">Severe persistent diarrhea</string>
    <string name="gds01_02d">Severe pneumonia</string>
    <string name="gds01_03">Presence of even __________ danger sign indicates that underlying disease is severe</string>
    <string name="gds01_03a">One</string>
    <string name="gds01_03b">Two</string>
    <string name="gds01_03c">Three</string>
    <string name="gds01_03d">None</string>
    <string name="gds01_04">For assessing a general danger sign, a healthcare provider needs to ASK _____ questions and LOOK for ______ observations to observe the child\'s actions.</string>
    <string name="gds01_04a">One, Two</string>
    <string name="gds01_04b">Two, Two</string>
    <string name="gds01_04c">Three, Two</string>
    <string name="gds01_04d">Three, One</string>
    <string name="gds01_05">Which of the following is NOT a danger sign?</string>
    <string name="gds01_05a">Child is not able to drink or breastfeed</string>
    <string name="gds01_05b">Child vomits everything</string>
    <string name="gds01_05c">Child has had more than one convulsion or prolonged convulsion, or is convulsing now.</string>
    <string name="gds01_05d">Child is shivering</string>
    <string name="gds02_01">A classification in a Yellow row (IMNCI chart) is a classification of very severe disease and needs urgent attention and referral.</string>
    <string name="gds02_02">Which of the following is NOT true, if a child has a general danger sign?</string>
    <string name="gds02_02a">Complete assessment immediately - the child has a severe problem. </string>
    <string name="gds02_02b">Provide urgent pre-referral treatment </string>
    <string name="gds02_02c">Observe and reassess child after pre-referral treatment</string>
    <string name="gds02_02d">Refer child to hospital</string>
    <string name="gds02_03">A child who is not able to hold anything down at all has the sign _______________</string>
    <string name="gds02_03a">Not able to drink or breastfeed</string>
    <string name="gds02_03b">vomits everything</string>
    <string name="gds02_03c">Lethargic</string>
    <string name="gds02_03d">Unconscious </string>
    <string name="gds02_04">What is the dose of Diazepam required to Stop Convulsions?</string>
    <string name="gds02_04a">0.5mg/kg diazepam injection solution per rectum</string>
    <string name="gds02_04b">0.8mg/kg diazepam injection solution per rectum</string>
    <string name="gds02_04c">1.0mg/kg diazepam injection solution per rectum</string>
    <string name="gds02_04d">1.5mg/kg diazepam injection solution per rectum</string>
    <string name="gds02_05">To make sugar water: Dissolve 4 level teaspoons of sugar (20 grams) in a _______ cup of clean water. </string>
    <string name="gds02_05a">100-ml</string>
    <string name="gds02_05b">150-ml</string>
    <string name="gds02_05c">200-ml</string>
    <string name="gds02_05d">250-ml</string>
    <string name="cdb01_01">Cough or difficult breathing that lasts for more than 14 days may indicate ______________.</string>
    <string name="cdb01_01a">Tuberculosis</string>
    <string name="cdb01_01b">Asthma</string>
    <string name="cdb01_01c">Whooping cough</string>
    <string name="cdb01_01d">All of the above</string>
    <string name="cdb01_02">Talha is 6 months old. He has fast breathing if:</string>
    <string name="cdb01_02a">30 or more breaths/minute</string>
    <string name="cdb01_02b">40 or more breaths/minute</string>
    <string name="cdb01_02c">50 or more breaths/minute</string>
    <string name="cdb01_02d">60 or more breaths/minute</string>
    <string name="cdb01_03">Fast breathing or ____________ if present in a child between 2 months to 5 years of age are the clinical signs for Pneumonia.</string>
    <string name="cdb01_03a">Wheeze</string>
    <string name="cdb01_03b">Chest in-drawing</string>
    <string name="cdb01_03c">Cough</string>
    <string name="cdb01_03d">Fever</string>
    <string name="cdb01_04">The child has chest in drawing if the lower chest wall (lower ribs) goes ____ when the child breathes IN.</string>
    <string name="cdb01_04a">IN</string>
    <string name="cdb01_04b">OUT</string>
    <string name="cdb02_01">What is the dose of Amoxicillin DT (250 gm) for children aged 12 months up to 3 years?</string>
    <string name="cdb02_01a">(&#189;) tablet twice a day</string>
    <string name="cdb02_01b"> <b>1</b> tablet twice a day</string>
    <string name="cdb02_01c"> <b>2</b> tablet twice a day</string>
    <string name="cdb02_01d"> <b>2.5</b> tablet twice a day</string>
    <string name="cdb02_02">The dose for intramuscular antibiotics (urgent referral); Ampicillin _______mg/kg and Gentamicin ________mg/kg</string>
    <string name="cdb02_02a"> 40 mg and 7 mg</string>
    <string name="cdb02_02b"> 45 mg and 7.5 mg</string>
    <string name="cdb02_02c"> 50 mg and 7.5 mg</string>
    <string name="cdb02_02d"> 55 mg and 8 mg</string>
    <string name="cdb02_03">What is the minimum SpO2 saturation level for urgent referral to a health facility?</string>
    <string name="cdb02_03a"> ≥90%</string>
    <string name="cdb02_03b"> ≤90%</string>
    <string name="cdb02_03c"> ≥80%</string>
    <string name="cdb02_03d"> ≥70%</string>
    <string name="cdb02_04">Standard flow rates for oxygen through nasal prongs or nasal catheters are up to ____ L/min for infants, up to _____ L/min for older children</string>
    <string name="cdb02_04a"><![CDATA[2 & 4]]></string>
    <string name="cdb02_04b"><![CDATA[3 & 4]]></string>
    <string name="cdb02_04c"><![CDATA[3.5 & 4.5]]></string>
    <string name="cdb02_04d"><![CDATA[4 & 4.5]]></string>
    <string name="cdb02_05">Following of the vaccines prevent pneumonia infections, <b>EXCEPT:</b></string>
    <string name="cdb02_05a">PCV</string>
    <string name="cdb02_05b">Hib</string>
    <string name="cdb02_05c">Pertussis</string>
    <string name="cdb02_05d">Rotavirus</string>
    <string name="cdb02_06">What are the harmful home remedies for cough?</string>
    <string name="cdb02_06a">Cough syrup containing codeine, antihistamines, alcohol, atropine and expectorants.</string>
    <string name="cdb02_06b">Oral and nasal decongestants</string>
    <string name="cdb02_06c">Opium or alcohol etc.</string>
    <string name="cdb02_06d">All of the above</string>
    <string name="diarrhea01_01">1- The death of a child with acute diarrhea is usually due to _____________.</string>
    <string name="diarrheatestq1a1">Dehydration</string>
    <string name="diarrheatestq1a2">Dysentery</string>
    <string name="diarrheatestq1a3">Hydration</string>
    <string name="diarrheatestq1a4">Malnutrition</string>
    <string name="diarrheatestq2">2- A child with persistent diarrhea needs Zinc DT for _________ days.</string>
    <string name="diarrheatestq2a1">10 days</string>
    <string name="diarrheatestq2a2">12 days</string>
    <string name="diarrheatestq2a3">14 days</string>
    <string name="diarrheatestq2a4">16 days</string>
    <string name="diarrheatestq3">3- The antibiotic prescribed for dysentery is __________ for 3 days.</string>
    <string name="diarrheatestq3a1">Ciprofloxacin</string>
    <string name="diarrheatestq3a2">Amoxicillin</string>
    <string name="diarrheatestq3a3">Ampicillin</string>
    <string name="diarrheatestq3a4">Diazepam</string>
    <string name="fanc_01">WHO recommends?</string>
    <string name="fanc_01a">One visit during every month of pregnancy</string>
    <string name="fanc_01b">One visit per month during the first 28 weeks, then two visits per month between 28 weeks and birth</string>
    <string name="fanc_01c">Four visits, with additional visits as needed</string>
    <string name="fanc_01d">One visit per month up to 28 weeks, two visits per month between 28 and 36 weeks, and one visit per week between 36 and 40 weeks</string>
    <string name="fanc_02">Danger signs of pregnancy include all of the following except:</string>
    <string name="fanc_02a">Vaginal bleeding</string>
    <string name="fanc_02b">Respiratory difficulty</string>
    <string name="fanc_02c">Fever</string>
    <string name="fanc_02d">Backache</string>
    <string name="fanc_03">The position of the fetus should be confirmed:</string>
    <string name="fanc_03a">At every visit</string>
    <string name="fanc_03b">After 14 weeks</string>
    <string name="fanc_03c">After 28 weeks</string>
    <string name="fanc_03d">After 36 weeks</string>
    <string name="fanc_04">Components of FANC include all of the following except:</string>
    <string name="fanc_04a">Identification of preexisting health conditions</string>
    <string name="fanc_04b">Early detection of complications arising during the pregnancy</string>
    <string name="fanc_04c">Magnesium sulfate injection</string>
    <string name="fanc_04d">Birth preparedness and complication readiness planning</string>
    <string name="fanc_05">A mother with which of the following blood groups is a candidate for Anti-D immunoglobulin:</string>
    <string name="fanc_05a">A+</string>
    <string name="fanc_05b">O+</string>
    <string name="fanc_05c">A-</string>
    <string name="fanc_05d">AB+</string>
    <string name="fanc_06">From the following list, please indicate which conditions are danger signs of pregnancy:</string>
    <string name="fanc_06a">Vaginal bleeding</string>
    <string name="fanc_06b">Increased frequency of micturition</string>
    <string name="fanc_06c">Respiratory difficulty</string>
    <string name="fanc_06d">Fever</string>
    <string name="fanc_06e">Backache</string>
    <string name="fanc_06f">Edema of feet and ankles</string>
    <string name="fanc_06g">Severe headache/blurred vision</string>
    <string name="fanc_06h">Heart burn</string>
    <string name="fanc_06i">Severe abdominal pain</string>
    <string name="fanc_06j">Nausea/vomiting</string>
    <string name="fanc_06k">Convulsions/loss of consciousness</string>
</resources>