<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="detail.acad.hassannaqvi.edu.aku.academicdetailing.ui.FANC_Post_test" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fldGrpPostFanc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <!--Q01-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_01"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/fancpost01a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_01a" />

                        <RadioButton
                            android:id="@+id/fancpost01b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_01b" />

                        <RadioButton
                            android:id="@+id/fancpost01c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_01c" />

                        <RadioButton
                            android:id="@+id/fancpost01d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_01d" />


                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!--Q02-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_02"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/fancpost02a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_02a" />

                        <RadioButton
                            android:id="@+id/fancpost02b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_02b" />

                        <RadioButton
                            android:id="@+id/fancpost02c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_02c" />

                        <RadioButton
                            android:id="@+id/fancpost02d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_02d" />


                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!--Q03-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_03"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/fancpost03a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_03a" />

                        <RadioButton
                            android:id="@+id/fancpost03b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_03b" />

                        <RadioButton
                            android:id="@+id/fancpost03c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_03c" />

                        <RadioButton
                            android:id="@+id/fancpost03d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_03d" />


                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <!--Q04-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_04"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/fancpost04a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_04a" />

                        <RadioButton
                            android:id="@+id/fancpost04b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_04b" />

                        <RadioButton
                            android:id="@+id/fancpost04c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_04c" />

                        <RadioButton
                            android:id="@+id/fancpost04d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_04d" />


                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <!--Q05-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_05"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/fancpost05a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_05a" />

                        <RadioButton
                            android:id="@+id/fancpost05b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_05b" />

                        <RadioButton
                            android:id="@+id/fancpost05c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_05c" />

                        <RadioButton
                            android:id="@+id/fancpost05d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_05d" />


                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <!--Q06-->
            <android.support.v7.widget.CardView
                style="@style/cardView">

                <LinearLayout
                    android:id="@+id/fancPost06"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/fanc_06"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/fancpost06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/fancpost06a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06a" />

                        <CheckBox
                            android:id="@+id/fancpost06b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06b" />

                        <CheckBox
                            android:id="@+id/fancpost06c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06c" />

                        <CheckBox
                            android:id="@+id/fancpost06d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06d" />

                        <CheckBox
                            android:id="@+id/fancpost06e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06e" />

                        <CheckBox
                            android:id="@+id/fancpost06f"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06f" />

                        <CheckBox
                            android:id="@+id/fancpost06g"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06g" />

                        <CheckBox
                            android:id="@+id/fancpost06h"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06h" />

                        <CheckBox
                            android:id="@+id/fancpost06i"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06i" />

                        <CheckBox
                            android:id="@+id/fancpost06j"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06j" />

                        <CheckBox
                            android:id="@+id/fancpost06k"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/fanc_06k" />

                    </RadioGroup>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/button1"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Start Training"
                    android:textSize="16sp" />


                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</layout>
